1. Again fixed appearance on mobile devices 1. Removed some redundant CSS 1. Coordinates won't be displayed on mobile devices since phones don't mouse and thus coordinates are useless,

--- a/css/base.css
+++ b/css/base.css
@@ -437,8 +437,6 @@ select > * {
 }
 
 .adv-lyr-sys-number > * {
-	display: inline-block;
-	vertical-align: middle;
 	border-right: none;
 }
 
